--- a/params.yaml
+++ b/params.yaml
@@ -366,9 +366,9 @@ geos:
       memory_limit: 400GB
       impute_chunks: 2
     calc_spatial_autocorr:
-      n_workers: 3
+      n_workers: 1
       n_workers_variogram: 20  # For WGS84 coords only
-      n_chunks: 14 # x direction only
+      gpu_ids: [0, 1]
     skcv_splits:
       n_workers: 50
       threads_per_worker: 1
