update DVC configuration: change remote storage from 'gcs' to 'ufrnas' and adjust registry URL

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,9 +1,7 @@
 [core]
     autostage = true
-    remote = gcs
+    remote = ufrnas
+[remote "ufrnas"]
+    url = ssh://geos/mnt/gsdata/projects/panops/cit-sci-traits/dvc-cache
 [remote "panops-registry"]
-    url = /mnt/FS_data/panops-data/registry
-[remote "gcs"]
-    url = gs://cit-sci-traits_dvc
-[remote "panops-registry-gcs"]
-    url = gs://panops-data-registry
+    url = /mnt/gsdata/projects/panops/panops-data-registry
