--- a/.dvc/config
+++ b/.dvc/config
@@ -4,4 +4,4 @@
 [remote "ufrnas"]
     url = ssh://geos/mnt/gsdata/projects/panops/cit-sci-traits/dvc-cache
 [remote "panops-registry"]
-    url = /mnt/gsdata/projects/panops/panops-data-registry
+    url = ssh://geos/mnt/gsdata/projects/panops/panops-data-registry
