--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,16 +37,18 @@ autogluon-tabular = {extras = ["all"], version = "^1.1.0"}
 statsmodels = "^0.14.2"
 tabulate = "^0.9.0"
 scikit-learn = "~1.4"
-rpy2 = "^3.5.16"
-cudf-cu11 = { version = "24.10.*", source = "nvidia" }
-cuml-cu11 = { version = "24.10.*", source = "nvidia" }
-cupy-cuda11x = "^13.3.0"
+
 rio-cogeo = "^5.3.6"
 ease-grid = "^0.2"
 verstack = "^4.1.4"
-# This is required for self-built versions of LightGBM for GPU support
-lightgbm = { version = "*", allow-prereleases = true, extras = ["no-binary"] }
 
+[tool.poetry.group.cuda.dependencies]
+cudf-cu11 = { version = "24.10.*", source = "nvidia" }
+cuml-cu11 = { version = "24.10.*", source = "nvidia" }
+cupy-cuda11x = "^13.3.0"
+
+[tool.poetry.group.r.dependencies]
+rpy2 = "^3.5.16"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.2"
 pytest = "^8.1.1"
