--- a/dvc.yaml
+++ b/dvc.yaml
@@ -40,7 +40,6 @@ stages:
       - ${raw_dir}/${trydb.raw.dir}/${trydb.raw.zip}
     params:
       - trydb
-      - container
     outs:
       - ${interim_dir}/${trydb.interim.dir}/${trydb.interim.filtered}:
           persist: true
@@ -48,7 +47,13 @@ stages:
           persist: true
 
   match_gbif_pfts:
-    cmd: python src/data/match_gbif_pfts.py
+    cmd: >-
+      stages/match_gbif_pfts.sh
+      ${container.type}
+      ${container.name}
+      ${container.docker_tag}
+      ${container.image}
+      poetry run python src/data/match_gbif_pfts.py
     deps:
       - src/data/match_gbif_pfts.py
       - ${raw_dir}/${gbif.raw.dir}
