Refactor DVC stage command and add extract_splot.sh for Slurm support
- Updated the command for the `extract_splot` stage in dvc.yaml to utilize a new shell script, enhancing execution flexibility.
- Introduced `extract_splot.sh` to manage job submission in Slurm environments and handle container execution based on the USE_CONTAINER variable.

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -68,7 +68,13 @@ stages:
           persist: true
 
   extract_splot:
-    cmd: python src/data/extract_splot.py
+    cmd: >-
+      stages/extract_splot.sh
+      ${container.type}
+      ${container.name}
+      ${container.docker_tag}
+      ${container.image}
+      poetry run python src/data/extract_splot.py
     deps:
       - src/data/extract_splot.py
       - ${raw_dir}/${datasets.Y.splot}
