Refactor sPlot map generation for parallel processing and trait-specific options
- Updated `dvc.yaml` to use a new shell script for building sPlot maps, enhancing execution flexibility.
- Introduced parameters for parallel processing in `params.yaml`, including `npartitions` and Dask resource settings.
- Added a new `.gitignore` file for Grass trait maps to exclude specific files from version control.
- Refactored `build_splot_maps.py` to support processing of specific traits and improved logging for better traceability.
- Created `build_splot_maps_parallel.sh` for managing parallel execution in Slurm environments.
- Added unit tests in `test_splot_parallel.py` to validate the new trait-specific functionality.

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -161,7 +161,8 @@ stages:
           persist: false 
 
   build_splot_maps:
-    cmd: python src/data/build_splot_maps.py
+    cmd: >-
+      stages/build_splot_maps_parallel.sh
     deps:
       - src/data/build_splot_maps.py
       - ${interim_dir}/${splot.interim.dir}/${splot.interim.extracted}
@@ -172,6 +173,7 @@ stages:
       - model_res
       - PFT
       - target_resolution
+      - datasets.Y.traits
     outs:
       - ${interim_dir}/${splot.interim.dir}/${splot.interim.traits}/${PFT}/${model_res}:
           persist: false
