Update DVC configuration to add new remote and adjust existing remote settings
- Added a new remote configuration for Google Cloud Storage (gcs) with the specified URL.
- Adjusted the existing remote configuration for ufrnas to ensure proper syntax and functionality.

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,5 +1,7 @@
 [core]
     autostage = true
     remote = ufrnas
-[remote "ufrnas"]
+['remote "ufrnas"']
     url = ssh://geos/mnt/gsdata/projects/panops/cit-sci-traits/dvc-cache
+['remote "gcs"']
+    url = gs://cit-sci-traits_dvc
