Update params.yaml and refactor build_gbif_maps.py and build_splot_maps.py for functional diversity metrics
- Increased `npartitions` and `n_workers` in `params.yaml` for improved performance.
- Enhanced `build_gbif_maps.py` to support functional diversity metrics processing, including new command-line arguments for resuming and specifying FD metrics.
- Refactored `build_splot_maps.py` to streamline trait and FD metric processing, ensuring compatibility with PCA and improving logging for better traceability.
- Added utility functions for loading and filtering data, and improved error handling for trait and FD metric validation.

--- a/params.yaml
+++ b/params.yaml
@@ -770,8 +770,10 @@ datasets:
   Y:
     splot: splot4-0
     gbif: all_tracheophyta_non-cult_2024-04-10
-    trait_stats: ["mean", "std", "median", "q05", "q95", "count"]
-    trait_stat: 1 # ('mean', 'std', 'median', 'q05', 'q95', 'count') (bands start at 1)
+    fd_mode: false
+    trait_stats: ["mean", "std", "median", "q05", "q95", "count"]  # non-FD metrics
+    # trait_stats: ["f_ric", "f_eve", "f_div", "sp_ric"]  # FD metrics
+    trait_stat: 1 # (bands start at 1, FD metrics contain only (metric, 'count')
     traits:
       - 4 # Stem specific density (SSD, stem dry mass per stem fresh volume) or wood density
       - 6 # Root rooting depth
