--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 tests/test_data/interim/try/traits_PCA4.parquet filter=lfs diff=lfs merge=lfs -text
 tests/test_data/interim/try/traits_TRY6.parquet filter=lfs diff=lfs merge=lfs -text
+reference/spatial_autocorr_Grass_1km_mean.parquet filter=lfs diff=lfs merge=lfs -text
